--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ src="https://www.facebook.com/tr?id=4956181354464383&ev=PageView&noscript=1"
 
  <!-- Botão -->
  <div id="cta1" class="mt-4 d-none">
- <a href="https://pay.kiwify.com.br/2FtN9pq" class="a-btn" style="text-decoration: none;">
+ <a href="https://pay.kiwify.com.br/qOzFMzS" class="a-btn" style="text-decoration: none;">
  <span class="span-btn">QUERO REVERTER O TIPO2 AGORA!</span>
  <span class="span-btn2">(atenção: vagas limitadas)</span>
  </a>
@@ -423,7 +423,7 @@ src="https://www.facebook.com/tr?id=4956181354464383&ev=PageView&noscript=1"
 </div>
 </footer>
 <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 1740000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 60000); // temporização da Call to Action (em milissegundos)
     </script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
