--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ src="https://www.facebook.com/tr?id=4956181354464383&ev=PageView&noscript=1"
 <script type="text/javascript" id="scr_624fcfb9752ce70008a44616">var s=document.createElement("script");s.src="https://cdn.converteai.net/facc60b5-1953-4bda-99fb-fd16220e986b/players/624fcfb9752ce70008a44616/player.js",s.async=!0,document.head.appendChild(s);</script>
 
  <!-- Botão -->
- <div id="cta1" class="mt-4 d-none style="color: #FF0000">
+ <div id="cta1" style="color: #FF0000" class="mt-4 d-none">
  <a href="https://pay.kiwify.com.br/qOzFMzS" class="a-btn" style="text-decoration: none;">
  <span class="span-btn" style="color: #FEFEFE">QUERO REVERTER O TIPO2 AGORA!</span>
  <span class="span-btn2"style="color: #000000">(atenção: vagas limitadas)</span>
